UX improvements: sticky mobile CTA, anchor navigation, responsive padding, enhanced CTAs, improved mobile tap targets, and visual hierarchy enhancements

--- a/about.html
+++ b/about.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Learn about Bloom'n Events Co - Perth's premier event planning company. Our story, values, and commitment to creating extraordinary experiences since our founding.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/about.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="About Us | Bloom'n Events Co">
     <meta property="og:description" content="Learn about Bloom'n Events Co - Perth's premier event planning company. Our story, values, and commitment to creating extraordinary experiences since our founding.">
@@ -616,6 +622,14 @@
             </div>
         </section>
     </main>
+
+    <!-- Sticky Mobile CTA -->
+    <div class="sticky-mobile-cta" id="stickyMobileCTA">
+        <div class="container">
+            <div class="sticky-mobile-cta-text">Ready to start your project?</div>
+            <a href="contact.html" class="btn btn-gold">Start Your Project</a>
+        </div>
+    </div>
 
     <!-- FOOTER -->
             <footer class="py-3 bg-dark" aria-label="Footer">
