--- a/case-study-centuria-50th-birthday.html
+++ b/case-study-centuria-50th-birthday.html
@@ -7,6 +7,12 @@
     <meta name="description" content="How Bloom'n Events Co designed and delivered a bespoke 50th Birthday Celebration for 140 St Georges Terrace, honouring the building's legacy while presenting it as contemporary and future-focused.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/case-study-centuria-50th-birthday.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags -->
     <meta property="og:title" content="Case Study: 140 St Georges Terrace — 50 Years | Landmark Anniversary Event">
     <meta property="og:description" content="How Bloom'n Events Co curated a bespoke anniversary experience that transformed shared building spaces into an elegant celebration, honouring 50 years while positioning the building as contemporary and future-focused.">
