--- a/case-study-centuria-breast-cancer.html
+++ b/case-study-centuria-breast-cancer.html
@@ -7,6 +7,12 @@
     <meta name="description" content="How Bloom'n Events Co delivered a duo-purpose installation at 140 St Georges Terrace honouring Breast Cancer Awareness Day while transitioning into a vibrant Spring activation.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/case-study-centuria-breast-cancer.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags -->
     <meta property="og:title" content="Case Study: Breast Cancer Awareness Day & Spring Activation | Purpose-Led Installation">
     <meta property="og:description" content="How Bloom'n Events Co designed a two-phase evolving installation that honoured Breast Cancer Awareness Day while seamlessly transitioning into a vibrant Spring activation.">
