--- a/case-study-centuria-connect140.html
+++ b/case-study-centuria-connect140.html
@@ -7,6 +7,12 @@
     <meta name="description" content="How Bloom'n Events Co delivered Connect 140, a curated B2B sundowner that repositioned 140 St Georges Terrace as a connected commercial community. Interactive activations, ~100 executives, and lasting impact.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/case-study-centuria-connect140.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags -->
     <meta property="og:title" content="Case Study: Connect 140 - B2B Tenant Networking Event">
     <meta property="og:description" content="How Bloom'n Events Co delivered Connect 140, a curated B2B sundowner that transformed 140 St Georges Terrace into a connected commercial community with interactive activations and lasting impact.">
@@ -304,6 +310,33 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+
+                <!-- Our Approach: Engineering & Production -->
+                <section class="mb-5" aria-labelledby="approachHeading">
+                    <div class="row">
+                        <div class="col-12">
+                            <h2 id="approachHeading" class="text-gold heading-blush-bg content-heading-large mb-4">Our Approach</h2>
+                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
+                                <div class="card-body text-center">
+                                    <h3 class="text-gold mb-3">In-House Production & Engineering</h3>
+                                    <p class="text-charcoal mb-3">Every element of Connect 140 was designed, engineered, and produced in-house—from concept sketches to final installation. This end-to-end control ensured precision, quality, and seamless execution.</p>
+                                    <ul class="text-charcoal mb-0 text-start">
+                                        <li><strong>Design & Engineering:</strong> Custom Giant Connect Four games engineered for stability, safety, and visual impact in a corporate environment</li>
+                                        <li><strong>Fabrication:</strong> All branding, signage, and interactive elements built locally in our workshop</li>
+                                        <li><strong>Technical Planning:</strong> Detailed site analysis, flow mapping, and safety assessments conducted in-house</li>
+                                        <li><strong>Installation & Delivery:</strong> One team managed setup, execution, and breakdown—ensuring consistency and accountability</li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="card mb-4" style="background-color: var(--coreChampers); border: 2px solid var(--coreGold);">
+                                <div class="card-body text-center">
+                                    <h3 class="text-gold mb-3">Engineering-Grade Reliability</h3>
+                                    <p class="text-charcoal mb-0">With 40+ years of combined expertise from high-risk, high-compliance environments, we applied engineering precision to every detail—from structural integrity of custom installations to safety protocols and contingency planning. Corporate and government clients trust us because we deliver with the same rigor and reliability they expect from their own operations.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
