--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,12 @@
     <meta name="description" content="Contact Bloom'n Events Co for your next event. Phone: 1800 826 268, Email: enquiries@bloomneventsco.com.au. Located in Brookton, WA. Get a free quote today!">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/contact.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com formsubmit.co; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags for social sharing -->
     <meta property="og:title" content="Contact Us | Bloom'n Events Co">
     <meta property="og:description" content="Contact Bloom'n Events Co for your next event. Phone: 1800 826 268, Email: enquiries@bloomneventsco.com.au. Located in Brookton, WA. Get a free quote today!">
@@ -197,6 +203,9 @@
                         <div class="col-md-6 first-col d-flex flex-column">
                             <div class="heading-blush-bg text-center">
                                 <h1 id="contactHeading" class="display-4 content-heading-large">Contact Us</h1>
+                            </div>
+                            <div class="p-4 pb-3">
+                                <p class="lead text-charcoal text-center mb-0"><strong>Give us a date, a budget, and time—we'll make it happen.</strong> One team. One accountable partner. Full-service event production with engineering-grade reliability.</p>
                             </div>
                             <form class="p-4 pt-6" id="contactForm" method="POST" action="https://formsubmit.co/enquiries@bloomneventsco.com.au">
                                 <div class="mb-3">
