--- a/displays.html
+++ b/displays.html
@@ -22,6 +22,12 @@
     <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/BloomnDisplays/Displays (10).png">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/displays.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -219,7 +225,7 @@
                     <h1 class="hero-heading text-center">Custom Displays & Installations in Perth</h1>
                     <p class="hero-subhead">Transform your space with stunning, bespoke displays that captivate and inspire. From seasonal decorations to permanent installations, we create visual experiences that leave lasting impressions.</p>
                     <div class="hero-cta">
-                        <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                        <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                         <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Displays</a>
                     </div>
                 </div>
@@ -571,7 +577,7 @@
                     <div class="card-body text-center p-5">
                         <p class="lead text-charcoal mb-5">Whether you need a seasonal display, custom installation, or permanent display, we're here to create solutions that captivate and inspire your audience.</p>
                         <div class="cta-buttons">
-                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
                         </div>
                         <p class="text-charcoal mt-4 mb-0">
