--- a/events.html
+++ b/events.html
@@ -22,6 +22,12 @@
     <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/Centuria Connect140/Connect140 (1).jpg">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/events.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -250,7 +256,7 @@
                             <h1 class="hero-headline">Professional Corporate Event Planning in Perth</h1>
                             <p class="hero-subhead">We design and deliver immersive corporate experiences that connect, elevate, and inspire. From networking events to product launches, our full-service approach ensures every detail is handled with precision and artistry.</p>
                             <div class="hero-cta">
-                                <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                                <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                                 <a href="#case-studies" class="btn btn-outline-gold btn-lg mb-3">View Case Studies</a>
                             </div>
                         </div>
@@ -611,7 +617,7 @@
                     <div class="card-body text-center p-5">
                         <p class="lead text-charcoal mb-5">Let's discuss how we can create a memorable experience that connects, elevates, and inspires your team and stakeholders.</p>
                         <div class="cta-buttons">
-                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Get a Free Consultation</a>
+                            <a href="contact.html" class="btn btn-gold btn-lg me-3 mb-3">Start Your Project</a>
                             <a href="gallery.html" class="btn btn-outline-gold btn-lg mb-3">View Our Portfolio</a>
                         </div>
                         <p class="text-charcoal mt-4 mb-0">
