--- a/capabilities.html
+++ b/capabilities.html
@@ -22,6 +22,12 @@
     <meta name="twitter:image" content="https://www.bloomneventsco.com.au/images/logo-wht.png">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/capabilities.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Performance Optimization: Resource Hints -->
     <link rel="dns-prefetch" href="//cdn.jsdelivr.net">
     <link rel="dns-prefetch" href="//fonts.googleapis.com">
@@ -172,6 +178,21 @@
                 </div>
             </div>
         </section>
+
+        <!-- Anchor Navigation -->
+        <nav class="anchor-nav" aria-label="Page navigation">
+            <div class="container">
+                <ul class="anchor-nav-list">
+                    <li class="anchor-nav-item"><a href="#introduction" class="anchor-nav-link">Introduction</a></li>
+                    <li class="anchor-nav-item"><a href="#oneStopHeading" class="anchor-nav-link">One-Stop Partner</a></li>
+                    <li class="anchor-nav-item"><a href="#fabricationHeading" class="anchor-nav-link">Fabrication</a></li>
+                    <li class="anchor-nav-item"><a href="#engineeringHeading" class="anchor-nav-link">Engineering</a></li>
+                    <li class="anchor-nav-item"><a href="#marketingHeading" class="anchor-nav-link">Design</a></li>
+                    <li class="anchor-nav-item"><a href="#digitalHeading" class="anchor-nav-link">Digital</a></li>
+                    <li class="anchor-nav-item"><a href="#signageHeading" class="anchor-nav-link">Signage</a></li>
+                </ul>
+            </div>
+        </nav>
 
         <!-- Capabilities Content -->
         <section class="section-main" id="introduction">
@@ -493,6 +514,15 @@
         </section>
 
     </main>
+
+    <!-- Sticky Mobile CTA -->
+    <div class="sticky-mobile-cta" id="stickyMobileCTA">
+        <div class="container">
+            <div class="sticky-mobile-cta-text">Ready to start your project?</div>
+            <a href="contact.html" class="btn btn-gold">Start Your Project</a>
+        </div>
+    </div>
+
     <!-- FOOTER - Will be loaded from partials/footer.html via scripts.js -->
 
     <!-- GSAP Animation Library (deferred for performance) -->
