--- a/case-study-hawaiian-forrestfield.html
+++ b/case-study-hawaiian-forrestfield.html
@@ -7,6 +7,12 @@
     <meta name="description" content="How Bloom'n Events Co delivered A World of Flavours, a vibrant family-focused activation celebrating international food offerings at Hawaiian's Forrestfield, driving awareness to Taste of Italy and creating memorable community moments.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/case-study-hawaiian-forrestfield.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags -->
     <meta property="og:title" content="Case Study: A World of Flavours - Community Event & Retail Activation">
     <meta property="og:description" content="How Bloom'n Events Co delivered A World of Flavours, a vibrant family-focused activation with hands-on creativity, cultural performance, and sensory storytelling at Hawaiian's Forrestfield.">
