--- a/case-study-hawaiian-neighbourhood-nibbles.html
+++ b/case-study-hawaiian-neighbourhood-nibbles.html
@@ -7,6 +7,12 @@
     <meta name="description" content="How Bloom'n Events Co delivered a successful food-based July school holiday activity programme across five Hawaiian shopping centres in 5 days, driving traffic uplifts and family engagement.">
     <link rel="canonical" href="https://www.bloomneventsco.com.au/case-study-hawaiian-neighbourhood-nibbles.html">
     
+    <!-- Security Headers -->
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' 'unsafe-inline' cdn.jsdelivr.net www.googletagmanager.com; style-src 'self' 'unsafe-inline' cdn.jsdelivr.net fonts.googleapis.com; font-src 'self' cdn.jsdelivr.net fonts.gstatic.com fonts.googleapis.com; img-src 'self' data: https:; connect-src 'self' www.googletagmanager.com api.openai.com; frame-src 'self' www.facebook.com widgets.sociablekit.com;">
+    <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
+    <meta http-equiv="X-Content-Type-Options" content="nosniff">
+    <meta http-equiv="Referrer-Policy" content="strict-origin-when-cross-origin">
+    
     <!-- Open Graph tags -->
     <meta property="og:title" content="Case Study: School Holiday Programme Drives Traffic Across 5 Centres in 5 Days">
     <meta property="og:description" content="How Bloom'n Events Co delivered a successful food-based July school holiday activity programme across five Hawaiian shopping centres in 5 days, driving traffic and family engagement.">
